--- a/Pr02NeonButton/style.css
+++ b/Pr02NeonButton/style.css
@@ -1,5 +1,5 @@
 body{
-  margin: 0%;
+  margin: 0;
   padding: 0;
   display: flex;
   justify-content: center;
@@ -49,7 +49,7 @@ a span:nth-child(3){
   background: linear-gradient(270deg,transparent,#2196f3);
 }
 a:hover span:nth-child(3){
-  left: 100%;
+  right: 100%;
   transition: 1s;
   transition-delay: 0.5s;
 }
