--- a/Pr03Shining Text/style.css
+++ b/Pr03Shining Text/style.css
@@ -16,4 +16,6 @@ p{
   letter-spacing: 4px;
   overflow: hidden;
   background: linear-gradient(90deg, #000, #fff, #000);
+  background-repeat: no-repeat;
+  animation: animate 3s linear infinite;
 }
