--- a/yes/Pr16 Stunning Parallax Scrolling/style.css
+++ b/yes/Pr16 Stunning Parallax Scrolling/style.css
@@ -6,6 +6,7 @@
 }
 body{
   background: #111;
+  padding-bottom: 300px;
 }
 body::before{
   content: 'Parallax';
@@ -61,4 +62,8 @@ section .container .content{
   padding: 40px;
   background: #333;
   z-index: 1;
+  max-width: 400px;
+  color: #fff;
+  box-shadow: 0 25px 35px rgba(0,0,0,0.1);
+  border-bottom: 6px solid #4ac7ff;
 }
